update personal information

--- a/fullpage/index.html
+++ b/fullpage/index.html
@@ -43,12 +43,9 @@
 	<div class="section " id="section0">
 		<div align="center" style="font-size: 16px">
 		<table border="0">
+		  <tr><td>就职于VMware北京研发中心</td></tr>
 		  <tr><td>中科院计算所16届硕士生</td></tr>
 		  <tr><td>吉林大学计算机系13届本科生</td></tr>
-		  <tr><td>VMware 实习生</td></tr>
-		  <tr><td>Intel 实习生</td></tr>
-		  <tr><td>一根稻草博主</td></tr>
-		  <tr><td>水木社区KernelTech版主</td></tr>
 		</table>
 		</div>
 	</div>
