--- a/index.html
+++ b/index.html
@@ -1,19 +1,4 @@
 ---
-layout: archive
+layout: home
 author_profile: true
-excerpt: "geeksword's tech blog."
-tags: [geeksword, onestraw, blog, linux, kernel, python, c/c++, network, tcp/ip]
-header:
-  image: Simatai_Great_Wall.jpg
-  caption: "credit: [Wikipedia](https://zh.wikipedia.org/wiki/%E5%8F%B8%E9%A9%AC%E5%8F%B0%E9%95%BF%E5%9F%8E)"
 ---
-
-{% include base_path %}
-
-<!-- <h3 class="archive__subtitle">Recent Posts</h3> -->
-
-{% for post in paginator.posts %}
-  {% include archive-single.html %}
-{% endfor %}
-
-{% include paginator.html %}
